--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div class="my-5">
+    <%= form.label :id %>
+    <%= form.text_field :id, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+  </div>
+
+  <div class="my-5">
     <%= form.label :nickname %>
     <%= form.text_field :nickname, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
