--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -266,12 +266,11 @@
   }
 
   .input_text_field {
-    @apply w-full text-lg font-medium text-gray-900 bg-white border border-gray-600 rounded block p-2 focus:ring-blue-500 placeholder placeholder:font-medium placeholder:leading-7 placeholder:text-sm placeholder:text-gray-um60;
+    @apply w-full text-lg font-medium text-gray-900 bg-white border border-gray-600 rounded block p-2 focus:ring-blue-500;
   }
 
-  .recurring_select {
-    @apply w-full text-lg font-medium text-gray-900 bg-white border border-gray-600 rounded block p-2 focus:ring-blue-500 focus:border-blue-500 
-    placeholder placeholder:font-medium placeholder:leading-7 placeholder:text-sm placeholder:text-gray-um60;
+  .input_text_field:placeholder {
+    @apply font-medium leading-7 text-sm text-gray-um60;
   }
 
   .fancy_label {
