--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -1,77 +1,149 @@
 <div id="<%= dom_id animal %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Nickname:</strong>
-    <%= animal.nickname %>
-  </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Surname:</strong>
-    <%= animal.surname %>
-  </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Gender:</strong>
-    <%= animal.gender %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Id:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.id %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Arival date:</strong>
-    <%= animal.arival_date %>
-  </p>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">From people:</strong>
-    <%= animal.from_people %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Nickname:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.nickname %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">From place:</strong>
-    <%= animal.from_place %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Surname:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.surname %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Birth year:</strong>
-    <%= animal.birth_year %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Gender:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.gender %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Birth month:</strong>
-    <%= animal.birth_month %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Arival date:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.arival_date %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Death date:</strong>
-    <%= animal.death_date %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      From people:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.from_people %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Color:</strong>
-    <%= animal.color %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      From place:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.from_place %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Aviary:</strong>
-    <%= animal.aviary %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Birth year:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.birth_year %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Description:</strong>
-    <%= animal.description %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Birth month:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.birth_month %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">History:</strong>
-    <%= animal.history %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Death date:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.death_date %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Graduation:</strong>
-    <%= animal.graduation %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Color:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.color %>
+    </p>
+  </div>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Animal type:</strong>
-    <%= animal.animal_type_id %>
-  </p>
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Aviary:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.aviary %>
+    </p>
+  </div>
+
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Description:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.description %>
+    </p>
+  </div>
+
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      History:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.history %>
+    </p>
+  </div>
+
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Graduation:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.graduation %>
+    </p>
+  </div>
+
+  <div class="py-2">
+    <p class="body-lg-bold-text inline">
+      Animal type:
+    </p>
+    <p class="body-lg-text pl-2 inline">
+      <%= animal.animal_type_id %>
+    </p>
+  </div>
 
 </div>
