--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -1,149 +1,152 @@
 <div id="<%= dom_id animal %>">
+  <div class="grid grid-cols-1 md:grid-cols-2">
+    <div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Id:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.id %>
+        </p>
+      </div>
 
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Id:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.id %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Nickname:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.nickname %>
+        </p>
+      </div>
 
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Surname:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.surname %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Nickname:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.nickname %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Gender:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.gender %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Surname:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.surname %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Arival date:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.arival_date %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Gender:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.gender %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          From people:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.from_people %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Arival date:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.arival_date %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          From place:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.from_place %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      From people:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.from_people %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Birth year:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.birth_year %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      From place:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.from_place %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Birth month:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.birth_month %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Birth year:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.birth_year %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Death date:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.death_date %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Birth month:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.birth_month %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Color:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.color %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Death date:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.death_date %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Aviary:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.aviary %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Color:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.color %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Description:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.description %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Aviary:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.aviary %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          History:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.history %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Description:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.description %>
-    </p>
-  </div>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Graduation:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.graduation %>
+        </p>
+      </div>
 
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      History:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.history %>
-    </p>
-  </div>
-
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Graduation:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.graduation %>
-    </p>
-  </div>
-
-  <div class="py-2">
-    <p class="body-lg-bold-text inline">
-      Animal type:
-    </p>
-    <p class="body-lg-text pl-2 inline">
-      <%= animal.animal_type_id %>
-    </p>
+      <div class="py-2">
+        <p class="body-lg-bold-text inline">
+          Animal type:
+        </p>
+        <p class="body-lg-text pl-2 inline">
+          <%= animal.animal_type_id %>
+        </p>
+      </div>
+    </div>
+    <%= render 'pictures' %>
   </div>
 
 </div>
