add medical procedures

--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -18,72 +18,72 @@
 
   <div class="my-5">
     <%= form.label :nickname %>
-    <%= form.text_field :nickname, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :nickname, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :surname %>
-    <%= form.text_field :surname, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :surname, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :gender %>
-    <%= form.text_field :gender, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :gender, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :arival_date %>
-    <%= form.date_field :arival_date, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.date_field :arival_date, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :from_people %>
-    <%= form.text_field :from_people, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :from_people, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :from_place %>
-    <%= form.text_field :from_place, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :from_place, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :birth_year %>
-    <%= form.date_field :birth_year, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.date_field :birth_year, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :birth_month %>
-    <%= form.text_field :birth_month, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :birth_month, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :death_date %>
-    <%= form.date_field :death_date, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.date_field :death_date, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :color %>
-    <%= form.text_field :color, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :color, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :aviary %>
-    <%= form.text_field :aviary, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :aviary, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :description %>
-    <%= form.text_field :description, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :description, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :history %>
-    <%= form.text_field :history, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :history, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :graduation %>
-    <%= form.text_field :graduation, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :graduation, class: "input_text_field" %>
   </div>
 
   <div class="inline">
