--- a/app/views/animal_types/_form.html.erb
+++ b/app/views/animal_types/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="my-5">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :name, class: "input_text_field" %>
   </div>
 
   <div class="inline">
