--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -146,7 +146,10 @@
         </p>
       </div>
     </div>
-    <%= render 'pictures' %>
+    <div>
+      <%= render 'animal_medicine' %>
+      <%= render 'pictures' %>
+    </div>
   </div>
 
 </div>
