--- a/app/views/medical_procedures/_form.html.erb
+++ b/app/views/medical_procedures/_form.html.erb
@@ -12,8 +12,18 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :date_complete %>
-    <%= form.date_field :date_complete, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.label :animal_id %>
+    <%= form.collection_select(:animal_id, @animals, :id, :nickname, { include_blank: "Select ...", required: true }, { class: "input_text_field" }) %>
+  </div>
+
+  <div class="my-5">
+    <%= form.label :procedure_type_id %>
+    <%= form.collection_select(:procedure_type_id, @procedures, :id, :name, { include_blank: "Select ...", required: true }, { class: "input_text_field" }) %>
+  </div>
+
+  <div class="my-5">
+    <%= form.label :date_planned %>
+    <%= form.date_field :date_planned, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
@@ -22,23 +32,13 @@
   </div>
 
   <div class="my-5">
-    <%= form.label :date_planned %>
-    <%= form.date_field :date_planned, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.label :date_complete %>
+    <%= form.date_field :date_complete, class: "input_text_field" %>
   </div>
 
   <div class="my-5">
     <%= form.label :notes %>
-    <%= form.textarea :notes, rows: 4, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :animal_id %>
-    <%= form.text_field :animal_id, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :procedure_type_id %>
-    <%= form.text_field :procedure_type_id, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.textarea :notes, rows: 4, class: "input_text_field" %>
   </div>
 
   <div class="inline">
