--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -9,6 +9,7 @@
           <th class="header_th">Gender</th>
           <th class="header_th">Age</th>
           <th class="header_th">Aviary</th>
+          <th class="header_th">Arival Date</th>
         </tr>
       </thead>
       <tbody>
@@ -31,6 +32,9 @@
             </td>
             <td class="mi_tbody_td">
               <%= animal.aviary %>
+            </td>
+            <td class="mi_tbody_td">
+              <%= animal.arival_date %>
             </td>
           </tr>
         <% end %>
