--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :animal_type_id, class: "fancy_label" %>
+    <%= form.label :animal_type_id %>
     <%= form.collection_select(:animal_type_id, @animal_types, :id, :name, { include_blank: "Select ...", required: true }, { class: "input_text_field" }) %>
   </div>
 
