--- a/app/views/animals/_animal_list.html.erb
+++ b/app/views/animals/_animal_list.html.erb
@@ -3,13 +3,13 @@
     <table class="mi_table" id="desk-table">
       <thead class="border border-l-0 border-r-0 border-gray-um60">
         <tr>
-          <th class="header_th">ID</th>
-          <th class="header_th">Nickname</th>
-          <th class="header_th">Surname</th>
-          <th class="header_th">Gender</th>
-          <th class="header_th">Age</th>
-          <th class="header_th">Aviary</th>
-          <th class="header_th">Arival Date</th>
+          <th class="header_th"><%= t('activerecord.attributes.animal.id') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.animal.nickname') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.animal.surname') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.animal.gender') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.animal.arival_date') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.animal.aviary') %></th>
+          <th class="header_th"><%= t('activerecord.attributes.animal.arival_date') %></th>
         </tr>
       </thead>
       <tbody>
