--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
               </div>
               <div class="group relative cursor-pointer">
                 <div class="flex items-center justify-between">
-                  <%= content_tag :span, t('menu.header.lang'), class: "nav-top-link" %>
+                  <%= content_tag :span, t('menu.header.language'), class: "nav-top-link" %>
                 </div>
                 <div class="invisible absolute z-50 flex w-full flex-col bg-blue-umblue py-1 group-hover:visible" onClick="">
                   <%= link_to t('menu.languages.ru'), change_locale_path(:ru), class: "nav-sub-link" %>
