--- a/app/views/medical_procedures/index.html.erb
+++ b/app/views/medical_procedures/index.html.erb
@@ -3,8 +3,8 @@
   <% content_for :title, "Medical procedures" %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Medical procedures</h1>
-    <%= link_to "New medical procedure", new_medical_procedure_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <h1 class="font-bold text-4xl"><%= t('text.Procedures') %></h1>
+    <%= link_to t('menu.new'), new_medical_procedure_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <%= turbo_frame_tag "medical_procedures" do %>
