--- a/app/views/animal_types/index.html.erb
+++ b/app/views/animal_types/index.html.erb
@@ -1,10 +1,10 @@
 <div class="w-full">
 
-  <% content_for :title, "Animal types" %>
+  <% content_for :title, t('text.types') %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Animal types</h1>
-    <%= link_to "New animal type", new_animal_type_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <h1 class="font-bold text-4xl"><%= t('text.Animal Types') %></h1>
+    <%= link_to t('menu.new'), new_animal_type_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="animal_types" class="min-w-full">
