--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -3,8 +3,8 @@
   <% content_for :title, "Animals" %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Animals</h1>
-    <%= link_to "New animal", new_animal_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <h1 class="font-bold text-4xl"><%= t('text.Animals') %></h1>
+    <%= link_to t('menu.new'), new_animal_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div>
@@ -80,14 +80,17 @@
           </div>
         </div>
 
-        <div class="mt-2 col-span-2 flex justify-start">
+        <div class="my-2 col-span-2 flex justify-start">
           <div class="mr-2">
-            <%= f.submit 'Search', data: { disable_with: false }, class: '' %>
+            <%= f.submit 'Search', data: { disable_with: false }, class: "primary_button" %>
           </div>
           <div>
-            <button type="button" class="filter-clear-btn"
+            <button type="button" class="tertiary_button"
               data-action='click->filters#clearFilters'>
-              Clear
+              <span>
+              <i class="fa-solid fa-times" aria-hidden="true"></i>
+             Clear
+            </span>
             </button>
           </div>
         </div>
