--- a/app/views/animals/_pictures.html.erb
+++ b/app/views/animals/_pictures.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag "pictures" do %>
   <div class="my-5">
     <h2>
-      Pictures
+      <%= t('text.Pictures') %>
     </h2>
     <p class="body-sm-text my-2">
       To upload multiple images, click Choose Files and select all images at once.
