--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -2,11 +2,11 @@
   <div class="grid grid-cols-1 lg:grid-cols-2 items-center">
     <h1><%= @animal.animal_type.name %></h1>
     <div class="lg:grid lg:justify-items-end">
-      <%= link_to "Edit this animal", edit_animal_path(@animal), class: "primary_button mb-2" %>
+      <%= link_to t('forms.buttons.edit'), edit_animal_path(@animal), class: "primary_button mb-2" %>
       <%= link_to animals_path do %>
         <span class="tertiary_button">
           <i class="fa-solid fa-arrow-left" aria-hidden="true"></i>
-          Back to Animals
+          <%= t('forms.buttons.back') %>
         </span>
       <% end %>
     </div>
